Validatons - pending optimization
