# openapi/openapi.yaml
@@ -1685,6 +1685,47 @@ paths:
       tags:
       - Employees
       x-openapi-router-controller: domains.employees.controllers.post.controller
+  /employees/validate:
+    post:
+      operationId: validate_employees
+      requestBody:
+        x-body-name: employee_validations
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserValidationList'
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListResponse'
+          description: User validation successful!
+        "429":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorListResponse'
+          description: API rate limit exceeded.
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorListResponse'
+          description: Something is broken.
+        "502":
+          description: The cloud is down or being upgraded.
+        "503":
+          description: The cloud is up but overloaded with requests.
+        "504":
+          description: The cloud is up but there is a failure somewhere causing the
+            request to fail.
+      security:
+      - bearerAuth: []
+      summary: Validate Employees
+      tags:
+      - Employees
+      x-openapi-router-controller: domains.employees.controllers.post.controller
   /users/profile/{id}:
     get:
       operationId: get_users_profile
@@ -2361,6 +2402,85 @@ components:
       - id
       title: UserSignUpResponse
       type: object
+    UserValidationList:
+      description: A list of user validations.
+      example:
+        message: Success.
+        status: 200
+        data:
+        - zipCode: zipCode
+          phone: phone
+          city: city
+          name: name
+          about: about
+          addressStreet: addressStreet
+          id: id
+          state: state
+        - zipCode: zipCode
+          phone: phone
+          city: city
+          name: name
+          about: about
+          addressStreet: addressStreet
+          id: id
+          state: state
+      properties:
+        employee_validations:
+          title: data
+          type: array
+      required:
+      - employee_validations
+      title: UserValidationList
+      type: object
+    UserValidation:
+      description: A user validation request object.
+      type: object
+      properties:
+        email:
+          title: email
+          type: string
+        first_name:
+          title: first_name
+          type: string
+        last_name:
+          title: last_name
+          type: string
+        company_name:
+          title: company_name
+          type: string
+        department_name:
+          title: department_name
+          type: string
+        pay_rate:
+          title: pay_rate
+          type: integer
+        company_id:
+          title: company_id
+          type: integer
+        department_id:
+          title: department_id
+          type: integer
+        is_email_valid:
+          title: is_name_valid
+          type: string
+        is_company_valid:
+          title: is_company_valid
+          type: string
+        is_department_valid:
+          title: is_department_valid
+          type: string
+        is_pay_rate_valid:
+          title: is_pay_rate_valid
+          type: string
+        is_employee_valid:
+          title: is_employee_valid
+          type: string
+      required:
+        - first_name
+        - last_name
+        - company_name
+        - department_name
+      title: UserValidation
   securitySchemes:
     bearerAuth:
       bearerFormat: JWT
